# TG-monitor

./: .gitignore  1  ARCHITECTURE.md  CHANNEL_API_TESTS.md  COMPILATION_FIX_REPORT.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  PYTHON_RUST_INTEGRATION_TEST.md  README.md  README_HTTP_SERVICE.md  config.example.toml  config.toml.bak  config_backup.toml  config_new.toml  test_forward.rs  test_relevant_message.json  test_telegram_curl.sh  test_telegram_forward.rs  test_user_id.md
docs/: telegram_client_libraries.md
journal/daily/: 2025-11-19.md  2025-11-20-reflection.md  2025-11-20.md  2025-11-21-reflection.md  2025-11-21.md
python_monitor/: CHANNEL_MANAGEMENT_SOLUTION.md  DIAGNOSTIC_REPORT.md  FIX_APPLIED.md  LOGIN_INSTRUCTIONS.md  QUICK_FIX.md  README.md  __init__.py  config_sample.ini  debug_monitor.py  manage_channels.py  monitor.py  requirements.txt  setup.sh  start.sh  test_class_lifetime.py  test_class_monitor.py  test_connection.py  test_error_handling.py  test_exact_copy.py  test_message.json  test_monitor.py  test_send.py
python_monitor/src/: config_loader.py  config_watcher.py  http_sender.py  telegram_client.py
src/: config.rs  lib.rs  main.rs  processor.rs  unicode_safe.rs
src/ai/: kimi.rs  local.rs  mod.rs  models.rs  openai.rs
src/http/: channel_handler.rs  handler.rs  mod.rs  server.rs
src/telegram/: bot.rs  client.rs
tests/: integration_test.rs
