[package]
name = "tg-meme-token-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Telegram 频道 Meme Token 交易信息监控与 AI 分析工具"

[dependencies]
# 异步运行时
tokio = { version = "1.36", features = ["full"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# 异步 trait
async-trait = "0.1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 正则表达式
regex = "1.0"

# Telegram 客户端（TODO: 需要选择合适的库）
# grammers-client = "0.5"
# 暂时使用其他库

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
